--- a/ch2/Chapter_02.ipynb
+++ b/ch2/Chapter_02.ipynb
@@ -114,6 +114,7 @@
     "        self._name = name\n",
     "        self._petals = petals\n",
     "        self._price = price\n",
+    "        # Can also have class parameters e.g. Class._name so any change to its variable value is reflected across all its children\n",
     "\n",
     "    def set_name(self, name: str):\n",
     "        self._name = name\n",
